# dmarc-monitor

./: .gitignore  Dockerfile  README.md  config.example.toml  dmarc_monitor.py  docker-compose.yml  pyproject.toml
.github/workflows/: main.yaml  releases.yaml
